src/corelib/thread/qfutureinterface.h
@@ -38,6 +38,8 @@ class CanceledHandler;
 template<class Function, class ResultType>
 class FailureHandler;
 #endif
+
+class QBasicFutureWatcher;
 }
 
 class Q_CORE_EXPORT QFutureInterfaceBase
@@ -175,6 +177,8 @@ private:
     template<class Function, class ResultType>
     friend class QtPrivate::FailureHandler;
 #endif
+
+    friend class QtPrivate::QBasicFutureWatcher;
 
     template<class T>
     friend class QPromise;
